--- a/role-panos-vpn/defaults/main.yml
+++ b/role-panos-vpn/defaults/main.yml
@@ -20,3 +20,4 @@ vpn_commit_config: 'false'
 vpn_configure_proxy_id: 'false'
 vpn_enable_nat_traversal: 'false'
 vpn_enable_passive_mode: 'false'
+vpn_is_disabled: 'false'
